syntax = "proto3";

package common;

option go_package = "github.com/UnicomAI/wanwu/api/proto/common";

message AppBrief {
    string orgId = 1;
    string userId = 2;
    string appId = 3;
    string appType = 4; // 应用类型 agent,rag,workflow
    string avatarPath = 5; // 图标minio object path
    string name = 6;
    string desc = 7;
    int64 createdAt = 8; // 创建时间，毫秒时间戳
    int64 updatedAt = 9; // 更新时间，毫秒时间戳
}

message AppBriefConfig {
    string name = 1;
    string desc = 2;
    string avatarPath = 3;
}

message AppModelConfig {
    string provider = 1;
    string model = 2;
    string modelId = 3;
    string modelType = 4;
    string config = 5;
}

message ToolAction {
    string name = 1;
    string description = 2;
    ToolActionInputSchema inputSchema = 3;
}

message ToolActionInputSchema {
    string type = 1; // 固定 object
    map<string, ToolActionInputSchemaValue> properties = 2;
    repeated string required = 3;
}

message ToolActionInputSchemaValue {
    string type = 1;
    string description = 2;
}

message StatisticChart {
    string tableName = 1;
    repeated StatisticChartLine chartLines = 2;
}

message StatisticChartLine {
    string lineName = 1;
    repeated StatisticChartLineItem items = 2;
}

message StatisticChartLineItem {
    string key = 1;
    float value = 2;
}

message ApiAuthWebRequest{
    string authType = 1;
    string apiKeyHeaderPrefix = 2;
    string apiKeyHeader = 3;
    string apiKeyQueryParam = 4;
    string apiKeyValue = 5;
}

message ApiAuth {
  string authType = 1;
  string authIn = 2;
  string authName = 3;
  string authValue = 4;
}